<resources>
    <string name="app_name">TorServices</string>

    <string name="pref_start_boot_title">Start Tor on boot</string>
    <string name="pref_start_boot_summary">
        Automatically start TorServices and connect Tor once this device has started
    </string>
    <string name="pref_allow_background_starts_title">Allow background starts</string>
    <string name="pref_allow_background_starts_summary">Let any app start Tor and related services</string>
    <string name="pref_start_on_boot_title">Start Tor on Boot</string>
    <string name="pref_start_on_boot_summary">Automatically start and connect Tor when this device boots</string>
    <string name="pref_use_persistent_notifications_title">Always-on notification</string>
    <string name="pref_use_persistent_notifications_summary">TorServices shows a notification so Android lets it reliably run in the background.</string>

    <string name="notification_title">Tor is running</string>

    <string name="unknown">Unknown</string>
    <string name="about_title">About TorServices</string>
    <string name="about_version">Version</string>
    <string name="tor_version">Tor Version</string>
    <string name="jtorctl_version">jtorctl version</string>
    <string name="about_site">Website</string>
    <string name="about_forum">Support forum</string>
    <string name="about_source">Source code</string>
    <string name="about_license">License</string>
    <string name="license_gplv3_later">GNU General Public License version\u00A03 or later</string>

</resources>
