<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp">

        <TextView
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_version" />

        <TextView
            android:id="@+id/version"
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unknown" />

        <TextView
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tor_version" />

        <TextView
            android:id="@+id/tor_version"
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unknown" />

        <TextView
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/jtorctl_version" />

        <TextView
            android:id="@+id/jtorctl_version"
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unknown" />

        <TextView
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_site" />

        <TextView
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="web"
            android:text="@string/site_link" />

        <TextView
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_source" />

        <TextView
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="web"
            android:text="@string/source_link" />

        <TextView
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_license" />

        <TextView
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/license_gplv3_later" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/ok_button"
                style="@android:style/Widget.Material.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@android:string/ok" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
